--- a/eng/targets/Settings.props
+++ b/eng/targets/Settings.props
@@ -132,6 +132,14 @@
     <PackageReference Include="Microsoft.CodeAnalysis.PerformanceSensitiveAnalyzers" Version="$(MicrosoftCodeAnalysisPerformanceSensitiveAnalyzersVersion)" PrivateAssets="all" />
   </ItemGroup>
 
+  <!-- 
+    Don't inject PerformanceSensitiveAttribute source by default to avoid duplicate definistion caused by IVT.
+    This needs to be set to true in projects at the root of IVT trees, in order for PerformanceSensitiveAnalyzers to work.
+  -->
+  <PropertyGroup Condition="'$(GeneratePerformanceSensitiveAttribute)' == ''">
+    <GeneratePerformanceSensitiveAttribute>false</GeneratePerformanceSensitiveAttribute>
+  </PropertyGroup>
+
   <!-- Language-specific analyzer packages -->
   <Choose>
     <When Condition="'$(Language)' == 'VB' and '$(RoslynCheckCodeStyle)' == 'true'">
