--- a/eng/targets/Settings.props
+++ b/eng/targets/Settings.props
@@ -133,7 +133,7 @@
   </ItemGroup>
 
   <!-- 
-    Don't inject PerformanceSensitiveAttribute source by default to avoid duplicate definistion caused by IVT.
+    Don't inject PerformanceSensitiveAttribute source by default to avoid duplicate definitions caused by IVT.
     This needs to be set to true in projects at the root of IVT trees, in order for PerformanceSensitiveAnalyzers to work.
   -->
   <PropertyGroup Condition="'$(GeneratePerformanceSensitiveAttribute)' == ''">
