--- a/src/CodeStyle/CSharp/Tests/Microsoft.CodeAnalysis.CSharp.CodeStyle.UnitTests.csproj
+++ b/src/CodeStyle/CSharp/Tests/Microsoft.CodeAnalysis.CSharp.CodeStyle.UnitTests.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Microsoft.CodeAnalysis.CSharp</RootNamespace>
     <DefineConstants>$(DefineConstants),CODE_STYLE</DefineConstants>
     <TargetFramework>net472</TargetFramework>
+    <IsShipping>false</IsShipping>
 
     <!-- https://github.com/dotnet/roslyn/issues/31412 -->
     <SkipTests Condition="'$(TestRuntime)' == 'Mono'">true</SkipTests>
