--- a/src/CodeStyle/VisualBasic/Tests/Microsoft.CodeAnalysis.VisualBasic.CodeStyle.UnitTests.vbproj
+++ b/src/CodeStyle/VisualBasic/Tests/Microsoft.CodeAnalysis.VisualBasic.CodeStyle.UnitTests.vbproj
@@ -6,6 +6,7 @@
     <TargetFramework>net472</TargetFramework>
     <RootNamespace></RootNamespace>
     <DefineConstants>$(DefineConstants),CODE_STYLE</DefineConstants>
+    <IsShipping>false</IsShipping>
 
     <!-- https://github.com/dotnet/roslyn/issues/31412 -->
     <SkipTests Condition="'$(TestRuntime)' == 'Mono'">true</SkipTests>
