Deal with file mappings where the drive letter doesn't have a \
Path.Combine("C:", "Foo.txt") returns "C:Foo.txt" which reflects the
behavior that Foo.txt is relative not to C:\ but to the working
directory of C: which is C:Foo.txt. This isn't the behavior I expected
so this was broken. Add the extra directory slash in and do more testing
so we get this right.

--- a/src/Features/Lsif/GeneratorTest/Microsoft.CodeAnalysis.Lsif.Generator.UnitTests.vbproj
+++ b/src/Features/Lsif/GeneratorTest/Microsoft.CodeAnalysis.Lsif.Generator.UnitTests.vbproj
@@ -13,6 +13,9 @@
     <ProjectReference Include="..\Generator\Microsoft.CodeAnalysis.Lsif.Generator.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Xunit.Combinatorial" Version="$(XunitCombinatorialVersion)" PrivateAssets="all" />
+  </ItemGroup>
+  <ItemGroup>
     <Import Include="Microsoft.CodeAnalysis.Lsif.Generator.UnitTests.Utilities" />
     <Import Include="Xunit" />
   </ItemGroup>
